fix(portfolio): bumping logos up 60px due to iPhone bar overlapping logos

--- a/src/components/landingpage/landing.css
+++ b/src/components/landingpage/landing.css
@@ -245,4 +245,8 @@ span.logo {
     #outro img {
         width: 35px;
     }
+
+    span.logo {
+        bottom: 60px;
+    }
 }
